@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.3 2004/05/28 16:40:34 minskim Exp $
+$NetBSD: distinfo,v 1.4 2004/10/30 06:31:02 minskim Exp $
 
-SHA1 (docbook-simple-1.1b3.zip) = c736ed89ddc5aa42a6dbff744bba99cf97c55291
-Size (docbook-simple-1.1b3.zip) = 33867 bytes
+SHA1 (docbook-simple-1.1CR2.zip) = 440025c6b5ceede7c1270da61aa7d026063d9c42
+Size (docbook-simple-1.1CR2.zip) = 34525 bytes
